# conv_img

./: README.md  conv_img.py  pyproject.toml
bak/: KonradExcel.py  convert_tif_png (2).py  convert_tif_png.py  convert_to_png.py  kcopy.py  mk_txt.py
src/conv_img/: __init__.py  conv_img.py
